MECLIPSE-351 restructures s2 build to allow aggregation of multiple mudoles into one update site
git-svn-id: https://svn.sonatype.com/repos/code/products/sonatype-studio/trunk/tycho-m2e@11141 839f2357-842e-4662-a642-f9b39ea64065