@@ -2,14 +2,11 @@
 <project>
   <modelVersion>4.0.0</modelVersion>
 
-  <prerequisites>
-    <maven>3.0</maven>
-  </prerequisites>
-
   <parent>
-    <groupId>com.sonatype</groupId>
-    <artifactId>sonatype</artifactId>
-    <version>8</version>
+    <groupId>com.sonatype.s2</groupId>
+    <artifactId>s2-parent</artifactId>
+    <version>1.0.0-SNAPSHOT</version>
+    <relativePath>../s2-parent/pom.xml</relativePath>
   </parent>
 
   <groupId>com.sonatype.s2.tycho</groupId>
@@ -17,11 +14,6 @@
   <version>0.4.0-SNAPSHOT</version>
   <packaging>pom</packaging>
   
-  <properties>
-    <tycho-version>0.6.0-SNAPSHOT</tycho-version>
-    <s2.site-compressed>http://repository.sonatype.org/service/local/repositories/com-sites/content-compressed/</s2.site-compressed>
-  </properties>
-
   <modules>
     <module>org.sonatype.tycho.m2e</module>
     <module>org.sonatype.tycho.m2e.feature</module>
@@ -29,91 +21,5 @@
     
     <module>org.sonatype.tycho.m2e.tests</module>
   </modules>
-
-  <repositories>
-    <repository>
-      <id>sonatype-public</id>
-      <url>http://repository.sonatype.org/content/groups/public</url>
-      <snapshots>
-        <enabled>true</enabled>
-      </snapshots>
-      <releases>
-        <enabled>true</enabled>
-      </releases>
-    </repository>
-    <repository>
-      <!--
-         Do not forget to add !galileo to mirrorOf=* in settings.xml  
-         See https://issues.sonatype.org/browse/TYCHO-272
-        -->
-      <id>galileo</id>
-      <layout>p2</layout>
-      <url>http://download.eclipse.org/releases/galileo</url>
-    </repository>
-    <repository>
-      <!--
-         This is necessary because of https://issues.sonatype.org/browse/NXCM-1000
-         Do not forget to add !m2e-snapshots to mirrorOf=* in settings.xml  
-        -->
-      <id>m2e-snapshots</id>
-      <url>http://repository.sonatype.org/content/repositories/eclipse-snapshots/</url>
-    </repository>
-    <repository>
-      <!--
-         This is necessary because of https://issues.sonatype.org/browse/NXCM-1000
-         Do not forget to add !m2e to mirrorOf=* in settings.xml  
-        -->
-      <id>m2e</id>
-      <url>http://repository.sonatype.org/content/repositories/eclipse/</url>
-    </repository>
-  </repositories>
   
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>org.sonatype.tycho</groupId>
-        <artifactId>tycho-maven-plugin</artifactId>
-        <version>${tycho-version}</version>
-        <extensions>true</extensions>
-      </plugin>
-      <plugin>
-        <groupId>org.sonatype.tycho</groupId>
-        <artifactId>target-platform-configuration</artifactId>
-        <version>${tycho-version}</version>
-        <configuration>
-          <resolver>p2</resolver>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
-
-  <profiles>
-    <profile>
-      <id>sun-jvm</id>
-      <activation>
-        <property>
-          <name>java.vendor.url</name>
-          <value>http://java.sun.com/</value>
-        </property>
-      </activation>
-      <properties>
-        <target.platform>m2e-e35</target.platform>        
-        <tycho.test.jvmArgs>-Xmx800m -XX:MaxPermSize=256m</tycho.test.jvmArgs>
-      </properties>
-    </profile>
-    <profile>
-      <id>osx</id>
-      <activation>
-        <property>
-          <name>java.vendor.url</name>
-          <value>http://www.apple.com/</value>
-        </property>
-      </activation>
-      <properties>
-        <target.platform>m2e-e35-nowt</target.platform>        
-        <tycho.test.jvmArgs>-Xmx800m -XX:MaxPermSize=256m -Dosgi.ws=cocoa -XstartOnFirstThread</tycho.test.jvmArgs>
-        <osgi.ws>cocoa</osgi.ws>
-      </properties>      
-    </profile>
-  </profiles>
 </project>
